--- a/src/navigation.html
+++ b/src/navigation.html
@@ -227,6 +227,43 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Company -->
+                    <div class="dropdown cursor-pointer relative">
+                        <!-- Item active: "text-gray-900", Item inactive: "text-gray-500" -->
+                        <button class="resources_button text-gray-500 group bg-white rounded-md inline-flex items-center text-base font-medium hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" aria-expanded="true">
+                            <span>Company</span>
+                            <!--
+                              Heroicon name: solid/chevron-down
+
+                              Item active: "text-gray-600", Item inactive: "text-gray-400"
+                            -->
+                            <svg class="text-gray-400 ml-2 h-5 w-5 group-hover:text-gray-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
+                            </svg>
+                        </button>
+                        <!-- Company drop down content -->
+                        <div class="dropdown-content top-0 hidden z-10 -ml-4 mt-6 transform px-2 w-screen max-w-md sm:px-0 lg:ml-0 lg:left-1/2 lg:-translate-x-1/2">
+                            <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 overflow-hidden">
+                                <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8">
+                                    <a href="/about_us.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                                        <!-- Heroicon name: outline/bookmark-alt -->
+                                        <svg class="flex-shrink-0 h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 4v12l-4-2-4 2V4M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                                        </svg>
+                                        <div class="ml-4">
+                                            <p class="text-base font-medium text-gray-900">
+                                                About Peacemakr
+                                            </p>
+                                            <p class="mt-1 text-sm text-gray-500">
+                                                Learn more about Peacemakr's mission and the team behind it.
+                                            </p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
                     <!-- <a href="/pricing.html" class="font-medium text-gray-500 hover:text-indigo-600">Pricing</a> -->
                 </nav>
                 <div class="hidden md:flex items-center justify-end md:flex-1 lg:w-0">
