--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,7 @@
 <a href="/solutions/data-loss-prevention.html"></a>
 <a href="/solutions/iot-data-protection.html"></a>
 <a href="engineers.html"></a>
+<a href="about_us.html"></a>
 <a href="media.html"></a>
 <a href="pricing.html"></a>
 <a href="./images/p_logo.png"></a>
