--- a/src/about_us.html
+++ b/src/about_us.html
@@ -66,31 +66,141 @@
 <!--Navigation bar-->
 @@include('./navigation.html'
 )<!--Main body-->
-<div class="relative bg-white overflow-hidden">
-    <div class="max-w-7xl mx-auto">
-        <div class="relative z-8 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
-
-            <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
-                <div class="sm:text-center lg:text-left">
-                    <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-                        <span class="block text-indigo-600 xl:inline">Our Funding Story<br></span>
-                    
-                    </h1>
-                    <p class="mt-10 text-lg text-gray-600">
-                    Peacemakr co-founders are security professionals who are passionate about
-                    data security. Through extensive careers in security and privacy domains the team recongized the need to protect data
-                    through simless, comprehensise and robus sulotion has emerged. The Team has started Peacemakr in 2019 to build 
-                    a highly-available and trusted solution to protect all types of data at a high scale.
-                      </p>
-                </div>
-            </main>
-        </div>
-    </div>
-</div>
-
-
 <main>
+<!-- About -->
+<div class="bg-white">
+    <div class="mx-auto max-w-7xl py-12 px-4 text-center sm:px-6 lg:px-8 lg:py-24">
+      <div class="space-y-12">
+        <!-- Our Founding Story -->
+        <div class="space-y-5 sm:mx-auto sm:max-w-xl sm:space-y-4 lg:max-w-5xl">
+            <h2 class="text-3xl text-indigo-600 font-bold tracking-tight sm:text-4xl">Our Founding Story</h2>
+            <p class="text-xl text-gray-600">Peacemakr's co-founders are security professionals who are passionate about data security and privacy. 
+                The Team recognized the need for a seamless, intuitive and trusted next-generation data protection platform. 
+                Co-founders started Peacemakr in 2019 to build a highly-available policy driven security solution to protect all types of data at scale.</p>
+          </div>
 
+        <div class="space-y-5 sm:mx-auto sm:max-w-xl sm:space-y-4 lg:max-w-5xl">
+          <h2 class="text-3xl font-bold tracking-tight sm:text-4xl">Meet our team</h2>
+        </div>
+        <ul role="list" class="mx-auto space-y-16 sm:grid sm:grid-cols-2 sm:gap-16 sm:space-y-0 lg:max-w-5xl lg:grid-cols-3">
+            <!-- Jon -->
+          <li>
+            <div class="space-y-6">
+              <img class="mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" src="/images/jon.jpg" alt="">
+              <div class="space-y-2">
+                <div class="space-y-1 text-lg font-medium leading-6">
+                  <h3>Jon McLachlan</h3>
+                  <p class="text-indigo-600">Co-Founder & CEO</p>
+                </div>
+                <ul role="list" class="flex justify-center space-x-5">
+                  <li>
+                    <a href="https://www.linkedin.com/in/jon-mclachlan/" class="text-gray-400 hover:text-gray-500">
+                      <span class="sr-only">LinkedIn</span>
+                      <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
+                        <path fill-rule="evenodd" d="M16.338 16.338H13.67V12.16c0-.995-.017-2.277-1.387-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248H8.014v-8.59h2.559v1.174h.037c.356-.675 1.227-1.387 2.526-1.387 2.703 0 3.203 1.778 3.203 4.092v4.711zM5.005 6.575a1.548 1.548 0 11-.003-3.096 1.548 1.548 0 01.003 3.096zm-1.337 9.763H6.34v-8.59H3.667v8.59zM17.668 1H2.328C1.595 1 1 1.581 1 2.298v15.403C1 18.418 1.595 19 2.328 19h15.34c.734 0 1.332-.582 1.332-1.299V2.298C19 1.581 18.402 1 17.668 1z" clip-rule="evenodd" />
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </li>
+
+            <!-- Mike -->
+            <li>
+                <div class="space-y-6">
+                  <img class="mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" src="/images/mike.jpg" alt="">
+                  <div class="space-y-2">
+                    <div class="space-y-1 text-lg font-medium leading-6">
+                      <h3>Mike Harmon</h3>
+                      <p class="text-indigo-600">Co-Founder & CSO</p>
+                    </div>
+                    <ul role="list" class="flex justify-center space-x-5">
+                      <li>
+                        <a href="https://www.linkedin.com/in/mike-harmon-1489b14/" class="text-gray-400 hover:text-gray-500">
+                          <span class="sr-only">LinkedIn</span>
+                          <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
+                            <path fill-rule="evenodd" d="M16.338 16.338H13.67V12.16c0-.995-.017-2.277-1.387-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248H8.014v-8.59h2.559v1.174h.037c.356-.675 1.227-1.387 2.526-1.387 2.703 0 3.203 1.778 3.203 4.092v4.711zM5.005 6.575a1.548 1.548 0 11-.003-3.096 1.548 1.548 0 01.003 3.096zm-1.337 9.763H6.34v-8.59H3.667v8.59zM17.668 1H2.328C1.595 1 1 1.581 1 2.298v15.403C1 18.418 1.595 19 2.328 19h15.34c.734 0 1.332-.582 1.332-1.299V2.298C19 1.581 18.402 1 17.668 1z" clip-rule="evenodd" />
+                          </svg>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </li>
+
+            <!-- Aman -->
+            <li>
+                <div class="space-y-6">
+                  <img class="mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" src="/images/aman.jpg" alt="">
+                  <div class="space-y-2">
+                    <div class="space-y-1 text-lg font-medium leading-6">
+                      <h3>Aman LaChapelle</h3>
+                      <p class="text-indigo-600">Co-Founder & CTO</p>
+                    </div>
+                    <ul role="list" class="flex justify-center space-x-5">
+                      <li>
+                        <a href="https://www.linkedin.com/in/aman-lachapelle-987029122/" class="text-gray-400 hover:text-gray-500">
+                          <span class="sr-only">LinkedIn</span>
+                          <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
+                            <path fill-rule="evenodd" d="M16.338 16.338H13.67V12.16c0-.995-.017-2.277-1.387-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248H8.014v-8.59h2.559v1.174h.037c.356-.675 1.227-1.387 2.526-1.387 2.703 0 3.203 1.778 3.203 4.092v4.711zM5.005 6.575a1.548 1.548 0 11-.003-3.096 1.548 1.548 0 01.003 3.096zm-1.337 9.763H6.34v-8.59H3.667v8.59zM17.668 1H2.328C1.595 1 1 1.581 1 2.298v15.403C1 18.418 1.595 19 2.328 19h15.34c.734 0 1.332-.582 1.332-1.299V2.298C19 1.581 18.402 1 17.668 1z" clip-rule="evenodd" />
+                          </svg>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </li>
+                          <!-- Daniel -->
+            <li>
+                <div class="space-y-6">
+                  <img class="mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" src="/images/daniel.jpg" alt="">
+                  <div class="space-y-2">
+                    <div class="space-y-1 text-lg font-medium leading-6">
+                      <h3>Daniel Huang</h3>
+                      <p class="text-indigo-600">Co-Founder</p>
+                    </div>
+                    <ul role="list" class="flex justify-center space-x-5">
+                      <li>
+                        <a href="https://www.linkedin.com/in/yhung119/" class="text-gray-400 hover:text-gray-500">
+                          <span class="sr-only">LinkedIn</span>
+                          <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
+                            <path fill-rule="evenodd" d="M16.338 16.338H13.67V12.16c0-.995-.017-2.277-1.387-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248H8.014v-8.59h2.559v1.174h.037c.356-.675 1.227-1.387 2.526-1.387 2.703 0 3.203 1.778 3.203 4.092v4.711zM5.005 6.575a1.548 1.548 0 11-.003-3.096 1.548 1.548 0 01.003 3.096zm-1.337 9.763H6.34v-8.59H3.667v8.59zM17.668 1H2.328C1.595 1 1 1.581 1 2.298v15.403C1 18.418 1.595 19 2.328 19h15.34c.734 0 1.332-.582 1.332-1.299V2.298C19 1.581 18.402 1 17.668 1z" clip-rule="evenodd" />
+                          </svg>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </li>  
+              
+            <!-- Sasha -->
+            <li>
+                <div class="space-y-6">
+                  <img class="mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" src="/images/sasha.jpg" alt="">
+                  <div class="space-y-2">
+                    <div class="space-y-1 text-lg font-medium leading-6">
+                      <h3>Daniel Huang</h3>
+                      <p class="text-indigo-600">Co-Founder</p>
+                    </div>
+                    <ul role="list" class="flex justify-center space-x-5">
+                      <li>
+                        <a href="https://www.linkedin.com/in/aliaksandr-sinkevich/" class="text-gray-400 hover:text-gray-500">
+                          <span class="sr-only">LinkedIn</span>
+                          <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
+                            <path fill-rule="evenodd" d="M16.338 16.338H13.67V12.16c0-.995-.017-2.277-1.387-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248H8.014v-8.59h2.559v1.174h.037c.356-.675 1.227-1.387 2.526-1.387 2.703 0 3.203 1.778 3.203 4.092v4.711zM5.005 6.575a1.548 1.548 0 11-.003-3.096 1.548 1.548 0 01.003 3.096zm-1.337 9.763H6.34v-8.59H3.667v8.59zM17.668 1H2.328C1.595 1 1 1.581 1 2.298v15.403C1 18.418 1.595 19 2.328 19h15.34c.734 0 1.332-.582 1.332-1.299V2.298C19 1.581 18.402 1 17.668 1z" clip-rule="evenodd" />
+                          </svg>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </li> 
+        </ul>
+      </div>
+    </div>
+  </div>
+  
 
 
 </main>
