--- a/src/about_us.html
+++ b/src/about_us.html
@@ -76,7 +76,7 @@
             <h2 class="text-3xl text-indigo-600 font-bold tracking-tight sm:text-4xl">Our Founding Story</h2>
             <p class="text-xl text-gray-600">Peacemakr's co-founders are security professionals passionate about data security and privacy. 
                 The Team recognized the need for a seamless, intuitive, and trusted next-generation data protection platform. 
-                The co-founders started Peacemakr in 2019 to build a highly-available policy-driven security solution to protect all types of data at scale.</p>
+                The co-founders started Peacemakr in 2019 and built a highly-available policy-driven security solution to protect all types of data at scale.</p>
           </div>
 
         <div class="space-y-5 sm:mx-auto sm:max-w-xl sm:space-y-4 lg:max-w-5xl">
