--- a/src/blog_ciso_guide_to_hipaa_encryption.html
+++ b/src/blog_ciso_guide_to_hipaa_encryption.html
@@ -292,7 +292,7 @@
         </div>
         <div class="mt-8 md:mt-0 md:order-1">
             <p class="text-center text-base text-gray-400">
-                &copy;2022 Peacemakr.io All rights reserved..
+                &copy;2022 Peacemakr.io All rights reserved.
             </p>
         </div>
     </div>
