Fixed Sasha's name

--- a/src/about_us.html
+++ b/src/about_us.html
@@ -180,7 +180,7 @@
                   <img class="mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" src="/images/sasha.jpg" alt="">
                   <div class="space-y-2">
                     <div class="space-y-1 text-lg font-medium leading-6">
-                      <h3>Daniel Huang</h3>
+                      <h3>Sasha Sinkevich</h3>
                       <p class="text-indigo-600">Co-Founder</p>
                     </div>
                     <ul role="list" class="flex justify-center space-x-5">
